# docs/swagger.yaml
@@ -1,7 +1,6 @@
 basePath: /
 definitions:
   model.Base:
-    description: 统一的 API 响应格式 ,响应成功的结果放在Data字段中;响应失败的结果放在Message字段中
     properties:
       code:
         type: integer
@@ -20,8 +19,6 @@ definitions:
       id:
         type: integer
       refreshToken:
-        type: string
-      tmpTime:
         type: string
       username:
         type: string
@@ -44,6 +41,36 @@ info:
   title: Gin + Swagger 示例 API
   version: "1.0"
 paths:
+  /admin/login:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: 管理员登录
+      parameters:
+      - description: 用户名
+        in: formData
+        name: username
+        required: true
+        type: string
+      - description: 用户名
+        in: formData
+        name: password
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 登录成功
+          schema:
+            $ref: '#/definitions/model.LoginResp'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/model.Base'
+      summary: 管理员登录
+      tags:
+      - 管理员
   /api/login:
     post:
       consumes:
